--- a/index.html
+++ b/index.html
@@ -593,8 +593,9 @@
                             <img src="assets/img/calc.png" alt="" class="portfolio__img">
 
                             <div class="portfolio__data">
-                                <h3 class="portfolio__title">Modern Website</h3>
-                                <p class="portfolio__description">Website adapted to all devices, with ui components</p>
+                                <h3 class="portfolio__title">Calculator</h3>
+                                <p class="portfolio__description">A fully functional calculator developed with JavaScript, CSS, and HTML. This project offers a clean and intuitive interface for performing basic arithmetic operations. The calculator is designed with 
+                                    responsiveness in mind, ensuring a seamless experience across devices.</p>
                                 <a href="https://shaikhibrahim2000.github.io/Calculator/" class="button button--flex button--small portfolio__button">
                                      Demo
                                      <i class="uil uil-arrow-right button__icon"></i>
@@ -608,8 +609,10 @@
 
                             <div class="portfolio__data">
                                 <h3 class="portfolio__title">Snake Game</h3>
-                                <p class="portfolio__description">Snake Game where user can score points.</p>
-                                <a href="#" class="button button--flex button--small portfolio__button">
+                                <p class="portfolio__description">A classic Snake game built with JavaScript, CSS, and HTML, playable with both 
+                                    keyboard and touch controls. This interactive game features smooth controls, dynamic gameplay, and a custom color scheme. The project showcases my skills in front-end development, including game 
+                                    logic implementation and responsive design.</p>
+                                <a href="https://shaikhibrahim2000.github.io/Snake-Game/" class="button button--flex button--small portfolio__button">
                                      Demo
                                      <i class="uil uil-arrow-right button__icon"></i>
                                 </a>
@@ -755,35 +758,6 @@
                             </div>
                         </div>
                     </div>
-
-                  <!-- <form action="" class="contact__form grid" id="contact-form">
-                        <div class="contact__inputs grid">
-                            <div class="contact__content">
-                                <label for="" class="contact__label">Name</label>
-                                <input type="text" name="user_name" class="contact__input">
-                            </div>
-                            <div class="contact__content">
-                                <label for="" class="contact__label">Email</label>
-                                <input type="email" name="user_email" class="contact__input">
-                            </div>
-                        </div>
-                        <div class="contact__content">
-                            <label for="" class="contact__label">Project</label>
-                            <input type="email" class="contact__input">
-                        </div>
-                        <div class="contact__content">
-                            <label for="" class="contact__label">Message</label>
-                            <textarea name="user_message" id="" cols="0" rows="7" class="contact__input"></textarea>
-                        </div>
-
-                        <div>
-                            <a href="#" class="button button--flex">
-                                Send Message
-                                <i class="uil uil-message button__icon"></i>
-                            </a>
-                            <p class="contact__message" id="contact-message"></p>
-                        </div>
-                    </form>-->
 
                     <form action="" class="contact__form grid" id="contact-form">
                         <div class="contact__group grid">
