--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
                                 <i class="uil uil-linkedin"></i>
                             </a>
 
-                            <a href="" target="_blank" class="home_social-icon">
+                            <!-- <a href="" target="_blank" class="home_social-icon">
                                 <i class="uil uil-dribbble"></i>
-                            </a>
+                            </a> -->
 
                             <a href="https://github.com/shaikhibrahim2000" target="_blank" class="home_social-icon">
                                 <i class="uil uil-github"></i>
@@ -136,19 +136,20 @@
                     <img src="assets/img/about.jpg" alt="" class="about__img">
 
                     <div class="about__data">
-                        <p class="about__description">Web developer with extensive experience and knowledge</p>
+                        <p class="about__description">I have a solid foundation in Computing Abstractions, Computational Mathematics, Data Structures & Algorithms, Database Management, and Object-Oriented Programming. I’m passionate about full-stack development, 
+                            frequently working with the MERN stack to build dynamic web applications. My experience includes projects in HTML, CSS, and JavaScript, and I’m proficient in Java and Python for software development and problem solving. <br> <br>I thrive on challenges and love working on innovative projects. In my free time, I continuously learn new skills, often earning certifications from platforms like Codecademy and FreeCodeCamp to stay ahead in the tech world.</p>
 
                         <div class="about__info">
                             <div>
-                                <span class="about__info-title">08+</span>
+                                <span class="about__info-title">02+</span>
                                 <span class="about__info-name">Years <br> experience</span>
                             </div>
                             <div>
-                                <span class="about__info-title">20+</span>
+                                <span class="about__info-title">10+</span>
                                 <span class="about__info-name">Completed <br> project</span>
                             </div>
                             <div>
-                                <span class="about__info-title">05+</span>
+                                <span class="about__info-title">03</span>
                                 <span class="about__info-name">Companies <br> worked</span>
                             </div>
                         </div>
@@ -610,7 +611,7 @@
                             <div class="portfolio__data">
                                 <h3 class="portfolio__title">Snake Game</h3>
                                 <p class="portfolio__description">A classic Snake game built with JavaScript, CSS, and HTML, playable with both 
-                                    keyboard and touch controls. This interactive game features smooth controls, dynamic gameplay, and a custom color scheme. The project showcases my skills in front-end development, including game 
+                                    keyboard and touch controls. This interactive game features smooth controls and a dynamic gameplay. The project showcases my skills in front-end development, including game 
                                     logic implementation and responsive design.</p>
                                 <a href="https://shaikhibrahim2000.github.io/Snake-Game/" class="button button--flex button--small portfolio__button">
                                      Demo
@@ -624,8 +625,9 @@
                             <img src="assets/img/tictactoe.png" alt="" class="portfolio__img">
 
                             <div class="portfolio__data">
-                                <h3 class="portfolio__title">TicTacToe</h3>
-                                <p class="portfolio__description">A modern tictactoe game where user can play with friends.</p>
+                                <h3 class="portfolio__title">Tic-Tac-Toe</h3>
+                                <p class="portfolio__description">A classic Tic-Tac-Toe game built using HTML, CSS, and JavaScript. The game features a responsive design, smooth user 
+                                    interactions, and real-time win detection.</p>
                                 <a href="#" class="button button--flex button--small portfolio__button">
                                      Demo
                                      <i class="uil uil-arrow-right button__icon"></i>
@@ -671,8 +673,8 @@
 
             <!--==================== TESTIMONIAL ====================-->
             <section class="testimonial section">
-                <h2 class="section__title">Testimonial</h2>
-                <span class="section__subtitle">My peers and colleague saying</span>
+                <h2 class="section__title">Recommendations</h2>
+                <span class="section__subtitle">My peers and colleagues saying</span>
 
                 <div class="testimonial__container container swiper-container">
                     <div class="swiper-wrapper">
@@ -684,17 +686,18 @@
 
                                     <div>
                                         <h3 class="testimonial__name">Abdullah Nakib</h3>
-                                        <span class="testimonial__client">classmate</span>
+                                        <span class="testimonial__client">SWE @Eli Lilly</span>
                                     </div>
                                 </div>
 
-                                <div>
+                                <!-- <div>
                                     <i class="uil uil-star testimonial__icon-star"></i>
                                     <i class="uil uil-star testimonial__icon-star"></i>
-                                </div>
+                                </div> -->
                             </div>
 
-                            <p class="testimonial__description">He is sincere and hard working.</p>
+                            <p class="testimonial__description">Highly sincere and dedicated, he thrives on challenges, always finding unique solutions. 
+                                Working with him is both enjoyable and rewarding</p>
                         </div>
 
                         <!--==================== TESTIMONIAL 2 ====================-->
@@ -709,13 +712,14 @@
                                     </div>
                                 </div>
 
-                                <div>
+                                <!-- <div>
                                     <i class="uil uil-star testimonial__icon-star"></i>
                                     <i class="uil uil-star testimonial__icon-star"></i>
-                                </div>
+                                </div> -->
                             </div>
 
-                            <p class="testimonial__description">He is sincere and hard working.</p>
+                            <p class="testimonial__description">Working with Shaikh at Systech was outstanding. He's incredibly helpful, and an 
+                                excellent team player with a curious and proactive approach.</p>
                         </div>
                     </div>
 
@@ -736,7 +740,7 @@
 
                             <div>
                                 <h3 class="contact__title ">Call Me</h3>
-                                <span class="contact__subtitle">000011100</span>
+                                <span class="contact__subtitle">223-269-0996</span>
                             </div>
                         </div>
 
