Added tictactoe link

--- a/index.html
+++ b/index.html
@@ -627,8 +627,8 @@
                             <div class="portfolio__data">
                                 <h3 class="portfolio__title">Tic-Tac-Toe</h3>
                                 <p class="portfolio__description">A classic Tic-Tac-Toe game built using HTML, CSS, and JavaScript. The game features a responsive design, smooth user 
-                                    interactions, and real-time win detection.</p>
-                                <a href="#" class="button button--flex button--small portfolio__button">
+                                    interactions, and real-time win detection. Used minimax algorithm to increase difficulty.</p>
+                                <a href="https://shaikhibrahim2000.github.io/TicTacToe/" class="button button--flex button--small portfolio__button">
                                      Demo
                                      <i class="uil uil-arrow-right button__icon"></i>
                                 </a>
