edits experience section

--- a/index.html
+++ b/index.html
@@ -405,13 +405,20 @@
                                 <i class="uil uil-times services__modal-close"></i>
                                 <ul class="services__modal-services grid">
                                     <li class-="services__modal-service">
-                                        <p>➢ Developed software with Java and Python to improve operations.</p>
+                                        <p>➢ Processed and analyzed flight operations data using MySQL to identify performance trends and support data-driven decision
+                                            making.</p>
                                     </li>                               
-                                        <p>➢ Collaborated in Agile teams to implement 15+ features.</p>
+                                        <p>➢ Conducted quantitative analysis of database queries and user traffic, implementing optimizations that improved data retrieval
+                                            efficiency by 15%.</p>
                                     </li>
                                     <li class-="services__modal-service">
-                                        <p>➢ Resolved 30+ issues, enhancing system performance by 15%.</p>
+                                        <p>➢ Built structured datasets and applied caching strategies to evaluate alternative scenarios, reducing response times by 20%
+                                            during peak usage.</p>
                                     </li>
+                                    <li class-="services__modal-service">
+                                        <p>➢ Validated data accuracy, troubleshot system errors, and collaborated with cross-functional teams to improve platform
+                                            stability and analytical reporting.</p>
+                                    </li>                                    
                                 </ul>
                             </div>
                         </div>
@@ -436,14 +443,20 @@
 
                                 <ul class="services__modal-services grid">
                                     <li class-="services__modal-service">
-                                        <p>➢ Developed an inventory management system with PHP, HTML, CSS, and JavaScript.</p>
+                                        <p>➢ Developed automated websites using PHP, HTML, CSS, and JavaScript, streamlining report card generation for over 1,500
+                                            students, which reduced administrative workload by 30%.</p>
                                     </li>
                                     <li class-="services__modal-service">
-                                        <p>➢ Engineered a CRM platform using React.js and Node.js, improving client interactions.</p>
+                                        <p>➢ Implemented real-time grade tracking and automated report card features, including GPA calculations and PDF exports
+                                            using the TCPDF library, resulting in an 50% decrease in processing time and an 20% reduction in calculation errors.</p>
                                     </li>
                                     <li class-="services__modal-service">
-                                        <p>➢ Optimized MySQL databases and enhanced security, reducing unauthorized access by 40%.</p>
+                                        <p>➢ Optimized MySQL databases by normalizing schemas, adding indexes, and implementing prepared statements, improving
+                                            query response time by 15% and enhancing security against SQL injection attacks.</p>
                                     </li>
+                                    <li class-="services__modal-service">
+                                        <p>➢ Conducted thorough testing and debugging using Jest, leading to a robust application that increased user satisfaction by 10%.</p>
+                                    </li>                                    
                                 </ul>
                             </div>
                         </div>
@@ -453,7 +466,7 @@
                     <div class="services__content">
                         <div>
                             <img src="assets/img/lumber84.png" alt="Ui/Ux Designer" class="services__image">
-                            <h3 class="services__title">Student AI <br> Researcher</h3>
+                            <h3 class="services__title">Software<br> Developer</h3>
                         </div>
 
                         <span class="button button--flex button--small button--link services__button">
@@ -467,11 +480,21 @@
                                 <i class="uil uil-times services__modal-close"></i>
                                 <ul class="services__modal-services grid">
                                     <li class-="services__modal-service">
-                                        <p>➢ Developed an ML pipeline to document and explain corporate C Basic code.</p>
+                                        <p>➢ Processed and analyzed flight operations data using MySQL to identify performance trends and support data-driven decision
+                                            making.</p>
                                     </li>
                                     <li class-="services__modal-service">
-                                        <p>➢ Translated legacy C Basic codebases into Python, Java, and .NET.</p>
+                                        <p>➢ Conducted quantitative analysis of database queries and user traffic, implementing optimizations that improved data retrieval
+                                            efficiency by 15%.</p>
                                     </li>
+                                    <li class-="services__modal-service">
+                                        <p>➢ Built structured datasets and applied caching strategies to evaluate alternative scenarios, reducing response times by 20%
+                                            during peak usage.</p>
+                                    </li>
+                                    <li class-="services__modal-service">
+                                        <p>➢ Validated data accuracy, troubleshot system errors, and collaborated with cross-functional teams to improve platform
+                                            stability and analytical reporting.</p>
+                                    </li>                                     
                                 </ul>
                             </div>
                         </div>
@@ -495,13 +518,16 @@
                                 <i class="uil uil-times services__modal-close"></i>
                                 <ul class="services__modal-services grid">
                                     <li class-="services__modal-service">
-                                        <p>➢ Conducted automated testing with Cypress; fixed 20+ bugs.</p>
+                                        <p>➢ Resolved issues in the seeding input system that caused data validation errors, reducing error rates by 40% and improving
+                                            overall functionality.</p>
                                     </li>
                                     <li class-="services__modal-service">
-                                        <p>➢ Optimized code and APIs, cutting data retrieval time by 40%.</p>
+                                        <p>➢ Implemented Cypress for end-to-end testing, creating 50+ test cases to fix data input and UI bugs. Optimized MySQL
+                                            queries to improve retrieval speed by 20% and refactored RESTful APIs for better performance.</p>
                                     </li>
                                     <li class-="services__modal-service">
-                                        <p>➢ Enhanced frontend design, boosting user satisfaction by 20%.</p>
+                                        <p>➢ Redesigned the frontend components using Vue.js, which significantly improved the user experience. This led to a 20%
+                                            increase in user satisfaction based on feedback from customer surveys.</p>
                                     </li>
                                 </ul>
                             </div>
