edits about me section

--- a/index.html
+++ b/index.html
@@ -89,27 +89,13 @@
                         </div>
 
                         <div class="home_img">
-                            <svg class="home_blob" viewBox="0 0 200 187" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                                <mask id="mask0" mask-type="alpha">
-                                    <path d="M190.312 36.4879C206.582 62.1187 201.309 102.826 182.328 134.186C163.346 165.547 
-                                    130.807 187.559 100.226 186.353C69.6454 185.297 41.0228 161.023 21.7403 129.362C2.45775 
-                                    97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 -0.149132 97.9666 
-                                    0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z"/>
-                                </mask>
-                                <g mask="url(#mask0)">
-                                    <path d="M190.312 36.4879C206.582 62.1187 201.309 102.826 182.328 134.186C163.346 
-                                    165.547 130.807 187.559 100.226 186.353C69.6454 185.297 41.0228 161.023 21.7403 
-                                    129.362C2.45775 97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 
-                                    -0.149132 97.9666 0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z"/>
-                                    <image class="home_blob-img" x="14" y="18" xlink:href="assets/img/prof.jpg"/>
-                                </g>
-                            </svg>
+                            <img src="assets/img/prof.jpg" alt="Shaikh Ibrahim Rahman" class="home_photo">
                         </div>
 
                         <div class="home_data">
                             <h1 class="home_title">Hi, I' am Shaikh</h1>
-                            <h3 class="home_subtitle">Aspiring Full Stack Developer</h3>
-                            <p class="home_description">I am a junior at Dickinson College pursuing a double major in Computer Science and Mathematics. With a keen interest in software engineering and data analytics, I am passionate about leveraging technology to solve complex problems and drive innovation. My academic background and hands-on experience have 
+                            <h3 class="home_subtitle">Aspiring Software Developer</h3>
+                            <p class="home_description">I am a senior at Dickinson College pursuing a double major in Computer Science and Mathematics. With a keen interest in software engineering and data analytics, I am passionate about leveraging technology to solve complex problems and drive innovation. My academic background and hands-on experience have 
                                 fueled my enthusiasm for working in the tech industry, where I strive to contribute to impactful projects 
                                 and gain deeper insights into the world of technology.</p>
                             <a href="#contact" class="button button--flex">
@@ -133,11 +119,20 @@
                 <span class="section__subtitle">My introduction</span>
 
                 <div class="about__container container grid">
-                    <img src="assets/img/about.jpg" alt="" class="about__img">
+                    <img src="assets/img/internship.JPG" alt="" class="about__img">
 
                     <div class="about__data">
-                        <p class="about__description">I have a solid foundation in Computing Abstractions, Computational Mathematics, Data Structures & Algorithms, Database Management, and Object-Oriented Programming. I’m passionate about full-stack development, 
-                            frequently working with the MERN stack to build dynamic web applications. My experience includes projects in HTML, CSS, and JavaScript, and I’m proficient in Java and Python for software development and problem solving. <br> <br>I thrive on challenges and love working on innovative projects. In my free time, I continuously learn new skills, often earning certifications from platforms like Codecademy and FreeCodeCamp to stay ahead in the tech world.</p>
+                        <p class="about__description">
+                            I am a computer science student with a strong foundation in Data Structures & Algorithms, Object-Oriented Programming, and Database Management, 
+                            with hands-on experience building and deploying full-stack web applications.
+                            <br /><br />
+                            I focus on writing clean, scalable code and building user-focused features across both front-end and back-end systems. I am proficient in Java and Python, 
+                            experienced with RESTful APIs, SQL/NoSQL databases, and Git-based collaboration, and comfortable working in agile, team-driven environments. I actively sharpen 
+                            my skills through real-world projects and industry-recognized certifications, and I am motivated to contribute quickly, learn fast, and deliver impact as a 
+                            software engineer.
+                            <br /><br />
+                            <em>The photo on the left was taken during my summer experience at 84 Lumber’s headquarters as a Software Developer intern.</em>
+                          </p>
 
                         <div class="about__info">
                             <div>
@@ -155,7 +150,7 @@
                         </div>
 
                         <div class="about__buttons">
-                            <a download="" href="assets/pdf/Resume3.pdf" class="button button--flex">
+                            <a download="" href="assets/pdf/Shaikh_resume.pdf" class="button button--flex">
                                Download Resume <i class="uil uil-download-alt button__icon"></i>
                             </a>
                         </div>
@@ -789,7 +784,7 @@
                     <div class="project__container container grid">
                         <div class="project__data">
                             <h2 class="project__title">Let's Connect!</h2>
-                            <p class="project__description">I'm always eager to explore new opportunities and collaborate on 
+                            <p class="project__description">I am always eager to explore new opportunities and collaborate on 
                                 exciting projects. Whether you're looking to team up on a development project, discuss potential internships, or explore career opportunities, I'd love to hear from you. Feel free to reach out to me to discuss how we can work together to bring innovative ideas to life. Let’s create something amazing!
 
                             </p>
